# profileinator

./: .gitignore  CLAUDE.md  LICENSE  README.md  hello.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
profileinator/: ai_service.py  main.py  server.py
profileinator/static/: index.html  main.js  styles.css
tests/: test_ai_service.py  test_main.py
