[project]
name = "profileinator"
version = "0.1.0"
description = "Generate profile pictures using AI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Austin Dickey"}]
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "pytailwindcss>=0.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
profileinator = "profileinator.server:run_server"

[tool.pyright]
include = ["profileinator", "tests"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
pythonPlatform = "All"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # line too long
    "E501",
]
